--- a/readme
+++ b/readme
@@ -1,1 +1,31 @@
-This will be a WIP ~
+
+
+## A wide selection of javascript algorithms, and data structures. 
+
+### **Contents**
+
+- basic javascript 
+- ES6
+- regular espressions basic   intermediate algorithm scripting challenges/solutions, and some project examples eventually. 
+- basic data sctructures
+- asic algorithm scripting challenges/solutions
+- OOP programing challenges/solutions
+- functional programming challenges/solutions
+- intermediate algorithm scripting challenges/solutions
+- Real world projects 
+
+x = expectation;
+
+energy = 100;
+
+do(a Thing) {
+    if (energy > 0) {
+        energy - 100;
+    }
+}
+
+todayIwill() {
+    do(career);
+    do(anythingElse);
+}
+
